# python-c-examples

./: README.md
project_1/: CMakeLists.txt  pyproject.toml
project_1/mymodule/: mymodule.cpp
